both mongo and elastic search